# pydbhub

./: .gitignore  LICENSE  README.md  dbhub.py  httphub.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: config.ini
examples/column_details/: main.py
examples/delete_database/: main.py
examples/diff_commits/: main.py
examples/download_database/: main.py
examples/list_branches/: main.py
examples/list_commits/: main.py
examples/list_databases/: main.py
examples/list_indexes/: main.py
examples/list_releases/: main.py
examples/list_tables/: main.py
examples/list_tags/: main.py
examples/list_views/: main.py
examples/metadata/: main.py
examples/sql_query/: main.py
examples/upload/: example.db  main.py
examples/webpage/: main.py
pydbhub/: __init__.py  dbhub - Copie.py  dbhub.py  httphub.py
tests/: test_dbhub.py
